# ax-llm-eval-workflow

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  analysis.py  auto_eval.py  datasets.py  evaluators.py  (+10 more)
backend/app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  observability.py  security.py
backend/app/evaluators/: __init__.py  base.py  built_in.py  custom_code.py  llm_judge.py  pipeline.py  registry.py  score_calculator.py  trace_base.py  trace_built_in.py
backend/app/models/: __init__.py  analysis.py  auth.py  auto_eval.py  common.py  dataset.py  evaluator.py  experiment.py  health.py  model.py  notification.py  project.py  prompt.py  review.py  search.py  test.py  trace.py
backend/app/services/: __init__.py  analysis_service.py  auto_eval_engine.py  auto_eval_metrics.py  auto_eval_repo.py  auto_eval_scheduler.py  batch_runner.py  clickhouse_client.py  clickhouse_queries.py  context_engine.py  dataset_service.py  evaluator_governance.py  experiment_control.py  experiment_query.py  langfuse_client.py  litellm_client.py  notification_service.py  prompt_utils.py  redis_client.py  review_decisions.py  review_metrics.py  review_queue.py  score_registry.py  search_service.py  single_test_runner.py  sse.py  trace_fetcher.py
backend/tests/: __init__.py  conftest.py  test_smoke.py
backend/tests/fixtures/: __init__.py  jwt_helper.py  mock_clickhouse.py  mock_langfuse.py  mock_litellm.py  mock_loki.py  mock_otel.py  mock_redis.py  trace_helper.py
backend/tests/infra/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_analysis_api.py  test_analysis_service.py  test_auto_eval_api.py  test_auto_eval_engine.py  test_auto_eval_lifespan.py  test_auto_eval_metrics.py  test_auto_eval_models.py  test_auto_eval_repo.py  test_auto_eval_scheduler.py  test_batch_evaluator_integration.py  test_batch_runner.py  test_batch_runner_trace_eval.py  test_built_in.py  test_clickhouse_queries.py  test_config.py  test_context_engine.py  test_custom_code.py  test_datasets.py  test_evaluate_trace.py  test_evaluators_governance.py  test_experiment_control.py  test_experiment_query.py  test_health.py  test_llm_judge.py  test_models.py  test_notifications.py  test_pipeline.py  test_projects.py  test_prompts.py  test_score_calculator.py  test_search.py  test_security.py  test_single_test_evaluator_integration.py  test_single_test_runner.py  test_tests_api.py  test_trace_built_in.py  test_trace_fetcher.py  test_traces_api.py
(+155 files in other folders)
